# Otus.Cpp.Homework6

./: .travis.yml  CMakeLists.txt  README.md  homework_6.cpp  homework_6.h  main.cpp  matrix.h  matrix_iterator.h  matrix_proxy.h  test.cpp  tuple_metafunctions.h
